# conan-hwloc

./: conanfile.py
test/: CMakeLists.txt  conanfile.py
